# jupyter_core

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  downstream.yml  test.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat  paths.rst  requirements.txt
docs/api/: jupyter_core.rst  jupyter_core.utils.rst  modules.rst
examples/: completions-zsh  jupyter-completion.bash
examples/jupyter_path_entrypoint/: MANIFEST.in  setup.cfg
examples/jupyter_path_entrypoint/src/entry_point_example/: __init__.py
examples/jupyter_path_entrypoint/src/entry_point_example/etc/jupyter/jupyter_config.d/: entrypoint-example.json
examples/jupyter_path_entrypoint_flit/: README.md  entry_point_example_flit.py  pyproject.toml
examples/jupyter_path_entrypoint_flit/src/entry_point_example_flit/: __init__.py
examples/jupyter_path_entrypoint_flit/src/entry_point_example_flit/etc/jupyter/jupyter_config.d/: entrypoint-example-flit.json
examples/jupyter_path_entrypoint_setuptools/: MANIFEST.in  README.md  setup.cfg
examples/jupyter_path_entrypoint_setuptools/src/entry_point_example_setuptools/: __init__.py
jupyter_core/: __init__.py  application.py  command.py  migrate.py  paths.py  troubleshoot.py  version.py
jupyter_core/tests/: mocking.py  test_application.py  test_command.py  test_entrypoints.py  test_migrate.py  test_paths.py
jupyter_core/utils/: __init__.py  patched_nest_asyncio.py  shutil_which.py
scripts/: jupyter  jupyter-migrate  jupyter-troubleshoot
tests/: test_application.py  test_command.py  test_migrate.py  test_paths.py  test_troubleshoot.py  test_utils.py
tests/dotipython/profile_default/: ipython_kernel_config.py
tests/dotipython_empty/profile_default/: ipython_config.py  ipython_console_config.py  ipython_nbconvert_config.py
