[build-system]
requires = ["hatchling>=1.4"]
build-backend = "hatchling.build"

[project]
name = "jupyter_core"
description = "Jupyter core package. A base package on which Jupyter projects rely."
license = { file = "COPYING.md" }
classifiers = [
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
requires-python = ">=3.8"
dependencies = [
  "platformdirs>=2.5",
  "traitlets>=5.3",
  "pywin32>=1.0 ; sys_platform == 'win32' and platform_python_implementation != 'PyPy'"
]
dynamic = ["version"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.org"

[project.readme]
text = "There is no reason to install this package on its own."
content-type = "text/plain"

[project.urls]
Homepage = "https://jupyter.org"
Documentation = "https://jupyter-core.readthedocs.io/"
Funding = "https://numfocus.org/"
Source = "https://github.com/jupyter/jupyter_core"
Tracker = "https://github.com/jupyter/jupyter_core/issues"

[project.optional-dependencies]
test = [
  "ipykernel",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-timeout"
]
docs = [
  "myst-parser",
  "sphinxcontrib_github_alt",
  "traitlets",
]

[project.scripts]
jupyter = "jupyter_core.command:main"
jupyter-migrate = "jupyter_core.migrate:main"
jupyter-troubleshoot = "jupyter_core.troubleshoot:main"

[tool.hatch.version]
path = "jupyter_core/version.py"

[tool.hatch.build.force-include]
"./jupyter.py" = "jupyter.py"

[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "make -C docs html SPHINXOPTS='-W'"

[tool.hatch.envs.test]
features = ["test"]
[tool.hatch.envs.test.scripts]
test = "python -m pytest -vv {args}"
nowarn = "test -W default {args}"

[tool.hatch.envs.cov]
features = ["test"]
dependencies = ["coverage", "pytest-cov"]
[tool.hatch.envs.cov.scripts]
test = "python -m pytest -vv --cov jupyter_core --cov-branch --cov-report term-missing:skip-covered {args}"
nowarn = "test -W default {args}"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_error_context = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-raXs --durations 10 --color=yes --doctest-modules --ignore-glob=jupyter_core/tests/dotipython*"
testpaths = [
    "jupyter_core/tests/"
]
filterwarnings= [
  # Fail on warnings
  "error",
  # Expected internal warnings
  "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\bProtocol\\):",
"@(abc\\.)?abstractmethod",
]
