[metadata]
name             = jupyter_core
version          = attr: jupyter_core.version.__version__
description      = Jupyter core package. A base package on which Jupyter projects rely.
long_description = There is no reason to install this package on its own.
long_description_content_type = text/plain
author           = Jupyter Development Team
author_email     = jupyter@googlegroups.org
url              = https://jupyter.org
project_urls     =
    Documentation = https://jupyter-core.readthedocs.io/
    Source        = https://github.com/jupyter/jupyter_core
    Tracker       = https://github.com/jupyter/jupyter_core/issues
license          = BSD-3-Clause
license_file     = COPYING.md
classifiers      =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = jupyter
packages = jupyter_core, jupyter_core.utils, jupyter_core.tests
include_package_data = True
python_requires = >=3.6
install_requires =
    traitlets
    pywin32>=1.0 ; sys_platform == 'win32' and platform_python_implementation != 'PyPy'

[options.entry_points]
console_scripts =
    jupyter              = jupyter_core.command:main
    jupyter-migrate      = jupyter_core.migrate:main
    jupyter-troubleshoot = jupyter_core.troubleshoot:main
