[metadata]
name             = jupyter_core
version          = attr: jupyter_core.version.__version__
description      = Jupyter core package. A base package on which Jupyter projects rely.
long_description = There is no reason to install this package on its own.
long_description_content_type = text/plain
author           = Jupyter Development Team
author_email     = jupyter@googlegroups.org
url              = https://jupyter.org
project_urls     =
    Documentation = https://jupyter-core.readthedocs.io/
    Funding       = https://numfocus.org/
    Source        = https://github.com/jupyter/jupyter_core
    Tracker       = https://github.com/jupyter/jupyter_core/issues
license          = BSD-3-Clause
license_file     = COPYING.md
classifiers      =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = jupyter
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    traitlets
    pywin32>=1.0 ; sys_platform == 'win32' and platform_python_implementation != 'PyPy'

[options.entry_points]
console_scripts =
    jupyter              = jupyter_core.command:main
    jupyter-migrate      = jupyter_core.migrate:main
    jupyter-troubleshoot = jupyter_core.troubleshoot:main

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841
