[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "entry_point_example_flit"
author = "Sir Robin"
author-email = "robin@camelot.uk"
home-page = "https://github.com/sirrobin/foobar"

[tool.flit.entrypoints.jupyter_config_path]
entry-point-example-flit = "entry_point_example_flit:JUPYTER_CONFIG_PATH"

[tool.flit.entrypoints.jupyter_data_path]
entry-point-example-flit = "entry_point_example_flit:JUPYTER_DATA_PATH"

[tool.flit.entrypoints.jupyter_config_resource]
entry-point-example-flit = "entry_point_example_flit:etc"

[tool.flit.entrypoints.jupyter_data_resource]
entry-point-example-flit = "entry_point_example_flit:share"


[tool.flit.sdist]
include = ["src/entry_point_example_flit/etc/", "src/entry_point_example_flit/share/"]
exclude = ["src/entry_point_example_flit/share/*/example_excluded_file_flit.json"]
