[metadata]
name = entry_point_example_setuptools
version = attr: entry_point_example_setuptools.__version__
description = a dummy module for testing jupyter_paths entrypoint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://jupyter.org
author = Jupyter Development Team
author_email = jupyter@googlegroups.org
license = BSD
license_file = COPYING.md
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6

install_requires =
    jupyter_core

[options.packages.find]
where =
    src

[options.entry_points]
jupyter_config_paths =
    entry-point-example-setuptools = entry_point_example_setuptools:JUPYTER_CONFIG_PATHS
jupyter_data_paths =
    entry-point-example-setuptools = entry_point_example_setuptools:JUPYTER_DATA_PATHS
